Versel deploy done

--- a/requirements.txt
+++ b/requirements.txt
@@ -95,7 +95,7 @@ python-decouple==3.8
 python-dotenv==1.2.1
 python-json-logger==4.0.0
 pytz==2025.2
-PyYAML==6.0.3
+xPyYAML==6.0.3
 pyzmq==27.1.0
 referencing==0.37.0
 reportlab==4.4.9
